--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 	Miniport
 -->
@@ -29,48 +29,43 @@
                         <div class="col-8 col-7-large col-12-medium">
 
                             <h3>Hieu Nguyen, PhD</h3>
-                            <h4>
-                                <small>Neuroimaging Research Branch</small><br />
-                                <small>National Institute on Drug Abuse, NIH</small><br />
-                                <small>Baltimore, MD 21224</small> <br /> <br />
-
-                                Email: hieu.nguyen at nih dot gov<br />
-                                <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br /><br />  
-				
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-">
-                            <h6>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-">
-                            <h6>
-                                I am an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH. Before, I was a graduate student at Experimental Mechanics and Computer Vision (EMCV) Labs,
-                                Catholic University of America where I worked under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on 3D imaging systems. Meanwhile, I received B.E.
-                                and M.Sc. in Electrical Engineering Department, Catholic University of America. <br /> <br />
-                            </h6>
+                            <h7>
+                                Neuroimaging Research Branch, NIDA-IRP, NIH<br />
+                                Email: hieu.nguyen at nih dot gov,
+                                <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br /><br />
+                            </h7>
+                            <h7>
+                                Dr. Hieu Nguyen is an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH, where his research focus on the Transcranial Magnetic Stimulation (TMS) hardware development
+                                and machine learning in neuroimaging. Before, he was a research assistant at Experimental Mechanics and Computer Vision (EMCV) Labs, working under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on 3D imaging systems.
+                                He previously received B.E. and M.Sc. degrees in the Electrical Engineering Department, Catholic University of America.
+                            </h7>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-md-">
-                            <h3>Research Interest</h3>
-                            <h6>
-                               <ul>
-                                    <li>Real-time, high-accuracy 3D imaging and shape measurement</li>
-                                    <li>Camera and depth sensors</li>
-                                    <li>Transcranial Magnetic Stimulation (TMS) control</li>
-                                    <li>Neuroimaging Modalities</li>
-                                </ul>
-                            </h6>
-
+                    <header>
+                        <br />
+                        <h3>Research Interest</h3>
+                    </header>
+                    <div class="row aln-center">
+                        <div class="col-4 col-6-medium col-12-small">
+                            <section class="box style0">
+                                <h6>Structured-light 3D imaging system</h6>
+                                <span class="image featured"><img src="images/Fig_1.jpg" alt="" /></span>
+                            </section>
+                        </div>
+                        <div class="col-4 col-6-medium col-12-small">
+                            <section class="box style0">
+                                <h6>Camera and depth sensors</h6>
+                                <span class="image featured"><img src="images/Fig_2.jpg" alt="" /></span>
+                            </section>
+                        </div>
+                        <div class="col-4 col-6-medium col-12-small">
+                            <section class="box style0">
+                                <h6>Transcranial Magnetic Stimulation</h6>
+                                <span class="image featured"><img src="images/Fig_3.jpg" alt="" /></span>
+                            </section>
                         </div>
                     </div>
-
                 </div>
 			</article>
 
@@ -80,9 +75,9 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol>
-				<li>Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>*, A. Vrana, S. Baldwin, C. Li, A. Giles, J. Wang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1016/j.brs.2022.05.017">A High-Density Theta Burst Paradigm Enhances the Aftereffects of Transcranial Magnetic Stimulation: Evidence from Focal Stimulation of Rat Motor Cortex</a>," <em>Brain Stimul.</em> <span style="font-weight:bold;">15</span>, 833-842, 2022. (* co-first author)</li>
-				<li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "<a href="https://doi.org/10.1016/j.measurement.2021.110663">Accurate 3D reconstruction via fringe-to-phase network</a>," <em>Measurement</em> <span style="font-weight:bold;">190</span>, 110663, 2022.</li>
-				<li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/photonics8110459">Accurate 3D Shape Reconstruction from Single Structured-Light Image via Fringe-to-Fringe Network</a>," <em>Photonics</em> <span style="font-weight:bold;">8</span>, 459, 2021.</li>
+                                <li>Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>*, A. Vrana, S. Baldwin, C. Li, A. Giles, J. Wang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1016/j.brs.2022.05.017">A High-Density Theta Burst Paradigm Enhances the Aftereffects of Transcranial Magnetic Stimulation: Evidence from Focal Stimulation of Rat Motor Cortex</a>," <em>Brain Stimul.</em> <span style="font-weight:bold;">15</span>, 833-842, 2022. (* co-first author)</li>
+                                <li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "<a href="https://doi.org/10.1016/j.measurement.2021.110663">Accurate 3D reconstruction via fringe-to-phase network</a>," <em>Measurement</em> <span style="font-weight:bold;">190</span>, 110663, 2022.</li>
+                                <li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/photonics8110459">Accurate 3D Shape Reconstruction from Single Structured-Light Image via Fringe-to-Fringe Network</a>," <em>Photonics</em> <span style="font-weight:bold;">8</span>, 459, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Nguyen, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1364/AO.426189">MIMONet: Structured-light 3D shape reconstruction by a multi-input multi-output network</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">60</span>, 5134-5144, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, K. Ly, T. Tran, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1016/j.rio.2021.100104">hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network</a>,"  <em>Results in Optics</em> <span style="font-weight:bold;">4</span>, 100104, 2021.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, T. Tran, Y. Wang, and Z. Wang, "<a href="https://doi.org/10.1016/j.optlaseng.2021.106639">Three-dimensional Shape Reconstruction from Single-shot Speckle Image Using Deep Convolutional Neural Networks</a>,"  <em>Opt. Lasers Eng.</em> <span style="font-weight:bold;">143</span>, 106639, 2021.</li>
