--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol>
-				<li><span style="font-weight:bold;">AH. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "An investigation of different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning,"  <em>Appl. Opt.</em>, 2022.</li>
+				<li><span style="font-weight:bold;">AH. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.468984">Investigation of different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 2022.</li>
 				<li><span style="font-weight:bold;">AH. Nguyen</span>, K. Ly, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.470208">Single-shot 3D shape acquisition using a learning-based structured light technique</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 8589, 2022.</li>
                                 <li>Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>*, A. Vrana, S. Baldwin, C. Li, A. Giles, J. Wang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1016/j.brs.2022.05.017">A High-Density Theta Burst Paradigm Enhances the Aftereffects of Transcranial Magnetic Stimulation: Evidence from Focal Stimulation of Rat Motor Cortex</a>," <em>Brain Stimul.</em> <span style="font-weight:bold;">15</span>, 833-842, 2022. (* co-first author)</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "<a href="https://doi.org/10.1016/j.measurement.2021.110663">Accurate 3D reconstruction via fringe-to-phase network</a>," <em>Measurement</em> <span style="font-weight:bold;">190</span>, 110663, 2022.</li>
