--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="container">
                     <h2>Journals</h2><br />
                         <h7>
-                            <ol>
+                            <ol reversed>
 			        <li>S. Makaroff, <span style="font-weight:bold;">H. Nguyen</span>, Q. Meng, H. Lu, A. Nummenmaam, and Z. Deng, "Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores,"  <em>J. Neural Eng.</em>, 2023. (provisional acceptance)</li>
 				<li><span style="font-weight:bold;">AH. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.468984">Different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 10105-10115, 2022.</li>
 				<li><span style="font-weight:bold;">AH. Nguyen</span>, K. Ly, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.470208">Single-shot 3D shape acquisition using a learning-based structured light technique</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 8589-8599, 2022.</li>
