--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
                         </div>
                         <div class="col-8 col-7-large col-12-medium">
 
-                            <h3>Hieu Nguyen, PhD</h3>
+                            <h3>Hieu Nguyen, PhD&nbsp;</h3>
+                            <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a>, <a href="hieu.nguyen@nih.gov">Email</a> <br /><br />
+                            
+                            <h5>Profession</h5>
                             <h7>
-                                Neuroimaging Research Branch, NIDA-IRP, NIH<br />
-                                Email: hieu.nguyen at nih dot gov,
-                                <a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a> <br /><br />
-                            </h7>
+                                &emsp; -Electrical Engineering and Postdoc, NIDA-IRP, NIH &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; 2019-Present<br />
+                                &emsp; -Research Fellow, EMCV Labs, CUA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; 2019-Present<br />
+                            </h7><br />
+                            <h5>Education</h5>
                             <h7>
-                                Dr. Hieu Nguyen is an Electrical Engineer and Postdoctoral Research Fellow at Neuroimaging Research Branch, NIDA-IRP, NIH, where his research focus on the Transcranial Magnetic Stimulation (TMS) hardware development
-                                and machine learning in neuroimaging. Before, he was a research assistant at Experimental Mechanics and Computer Vision (EMCV) Labs, working under the supervision of <a href="https://sites.google.com/cardinalmail.cua.edu/wangz/">Dr. Zhaoyang Wang</a> on 3D imaging systems.
-                                He previously received B.E. and M.Sc. degrees in the Electrical Engineering Department, Catholic University of America.
+                                &emsp; -Catholic University of America, Ph.D. in Mechanical Engineering &emsp;&emsp;&emsp;&emsp; 2015-2019<br />
+                                &emsp; -Catholic University of America, M.Sc in Electrical Engineering &emsp;&emsp;&emsp;&emsp;&emsp;&nbsp; 2013-2014<br />
+                                &emsp; -Catholic University of America, B.E. in Electrical Engineering &emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;    2011-2013
                             </h7>
                         </div>
                     </div>
@@ -75,10 +78,10 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol reversed>
-				<li><span style="font-weight:bold;">AH. Nguyen</span>, O. Rees, and Z. Wang, "<a href="https://doi.org/10.1016/j.gmod.2023.101171">Learning-based 3D imaging from single structured-light image</a>,"  <em>Graph. Models</em> <span style="font-weight:bold;">126</span>, 101171, 2023.</li>
-			        <li>S. Makaroff, <span style="font-weight:bold;">H. Nguyen</span>, Q. Meng, H. Lu, A. Nummenmaam, and Z. Deng, "<a href="https://doi.org/10.1088/1741-2552/acae0d">Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">20</span>, 016028, 2023.</li>
-				<li><span style="font-weight:bold;">AH. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.468984">Different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 10105-10115, 2022.</li>
-				<li><span style="font-weight:bold;">AH. Nguyen</span>, K. Ly, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.470208">Single-shot 3D shape acquisition using a learning-based structured light technique</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 8589-8599, 2022.</li>
+				                <li><span style="font-weight:bold;">AH. Nguyen</span>, O. Rees, and Z. Wang, "<a href="https://doi.org/10.1016/j.gmod.2023.101171">Learning-based 3D imaging from single structured-light image</a>,"  <em>Graph. Models</em> <span style="font-weight:bold;">126</span>, 101171, 2023.</li>
+			                    <li>S. Makaroff, <span style="font-weight:bold;">H. Nguyen</span>, Q. Meng, H. Lu, A. Nummenmaam, and Z. Deng, "<a href="https://doi.org/10.1088/1741-2552/acae0d">Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">20</span>, 016028, 2023.</li>
+				                <li><span style="font-weight:bold;">AH. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.468984">Different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 10105-10115, 2022.</li>
+				                <li><span style="font-weight:bold;">AH. Nguyen</span>, K. Ly, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.470208">Single-shot 3D shape acquisition using a learning-based structured light technique</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 8589-8599, 2022.</li>
                                 <li>Q. Meng, <span style="font-weight:bold;">H. Nguyen</span>*, A. Vrana, S. Baldwin, C. Li, A. Giles, J. Wang, Y. Yang, and H. Lu, "<a href="https://doi.org/10.1016/j.brs.2022.05.017">A High-Density Theta Burst Paradigm Enhances the Aftereffects of Transcranial Magnetic Stimulation: Evidence from Focal Stimulation of Rat Motor Cortex</a>," <em>Brain Stimul.</em> <span style="font-weight:bold;">15</span>, 833-842, 2022. (* co-first author)</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span>, E. Novak, and Z. Wang, "<a href="https://doi.org/10.1016/j.measurement.2021.110663">Accurate 3D reconstruction via fringe-to-phase network</a>," <em>Measurement</em> <span style="font-weight:bold;">190</span>, 110663, 2022.</li>
                                 <li><span style="font-weight:bold;">H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/photonics8110459">Accurate 3D Shape Reconstruction from Single Structured-Light Image via Fringe-to-Fringe Network</a>," <em>Photonics</em> <span style="font-weight:bold;">8</span>, 459, 2021.</li>
