--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h2>Journals</h2><br />
                         <h7>
                             <ol reversed>
-				<li><span style="font-weight:bold;">A.H. Nguyen</span>, K. Ly, V.K. Lam and Z. Wang, "Generalized fringe-to-phase framework for single-shot 3D reconstruction integrating structured light with deep learning,"  <em>Sensors</em>, 2023.</li>
+				<li><span style="font-weight:bold;">A.H. Nguyen</span>, K. Ly, V.K. Lam and Z. Wang, ""<a href="https://doi.org/10.3390/s23094209">Generalized fringe-to-phase framework for single-shot 3D reconstruction integrating structured light with deep learning</a>,"  <em>Sensors</em> <span style="font-weight:bold;">23</span>, 4209, 2023.</li>
 				<li><span style="font-weight:bold;">A.H. Nguyen</span>, O. Rees, and Z. Wang, "<a href="https://doi.org/10.1016/j.gmod.2023.101171">Learning-based 3D imaging from single structured-light image</a>,"  <em>Graph. Models</em> <span style="font-weight:bold;">126</span>, 101171, 2023.</li>
 			        <li>S. Makaroff, <span style="font-weight:bold;">H. Nguyen</span>, Q. Meng, H. Lu, A. Nummenmaam, and Z. Deng, "<a href="https://doi.org/10.1088/1741-2552/acae0d">Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">20</span>, 016028, 2023.</li>
 				<li><span style="font-weight:bold;">A.H. Nguyen</span>, B. Sun, C. Li, and Z. Wang, "<a href="https://doi.org/10.1364/AO.468984">Different structured-light patterns in single-shot 2D-to-3D image conversion using deep learning</a>,"  <em>Appl. Opt.</em> <span style="font-weight:bold;">61</span>, 10105-10115, 2022.</li>
