--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 					<div style="float: left; margin-left: 100px; ">
 						<header>
 							<h1 style="text-align:left">Hieu Nguyen, Ph.D. <br /><br /></h1>
+							<p style="text-align:left;"><a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">[Google Scholar]</a> <a href="https://www.linkedin.com/in/29nguyen/">[LinkedIn]</a><br /><br /></p>
+
 							<p style="text-align:left;">Staff Electrical Engineer</p>
 							<p style="text-align:left;">Neuroimageing Research Branch, NIDA-IRP, NIH</p>
 							<p style="text-align:left;">hieu.nguyen@nih.gov <br /><br /></p>
