--- a/publication.html
+++ b/publication.html
@@ -69,7 +69,7 @@
 									</header>
 									<p>
 										<ol reversed>
-											<li>X. Xiao, C. Hammond, B.J. Salmeron, D. Wang, H. Gu, T. Zhai, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, T.J. Ross, and Y. Yang, "Brain Functional Connectome Defines a Transdiagnostic Dimension Shared by Cognitive Function and Psychopathology in Preadolescents,"  <em>Biol. Psychiatry</em>, 2023.</li>
+											<li>X. Xiao, C. Hammond, B.J. Salmeron, D. Wang, H. Gu, T. Zhai, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, T.J. Ross, and Y. Yang, "<a href="https://doi.org/10.1016/j.biopsych.2023.08.028">Brain Functional Connectome Defines a Transdiagnostic Dimension Shared by Cognitive Function and Psychopathology in Preadolescents</a>,"  <em>Biol. Psychiatry</em>, 2023.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/s23167284">Time-distributed framework for 3D reconstruction integrating fringe projection with deep learning</a>,"  <em>Sensors</em> <span style="font-weight:bold;">23</span>, 7284, 2023.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span>, K. Ly, V.K. Lam and Z. Wang, "<a href="https://doi.org/10.3390/s23094209">Generalized fringe-to-phase framework for single-shot 3D reconstruction integrating structured light with deep learning</a>,"  <em>Sensors</em> <span style="font-weight:bold;">23</span>, 4209, 2023.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span>, O. Rees, and Z. Wang, "<a href="https://doi.org/10.1016/j.gmod.2023.101171">Learning-based 3D imaging from single structured-light image</a>,"  <em>Graph. Models</em> <span style="font-weight:bold;">126</span>, 101171, 2023.</li>
