--- a/research.html
+++ b/research.html
@@ -10,6 +10,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
+		<link rel="stylesheet" href="style_1.css"/>
+
+
 	</head>
 	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
@@ -35,160 +41,279 @@
 							<div class="col-3 col-12-medium">
 
 								<!-- Sidebar -->
-								<section class="box">
-									<header>
-										<h3>Hieu Nguyen, Ph.D. <br /> <br /></h3>
-										<p><a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a></p>
-										<p><a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a></p>
-										<p><a href="hieu.nguyen@nih.gov">Email</a></p>
-									</header>
-								</section>
-
+									<section class="box">
+										<header>
+											<h3>Hieu Nguyen, Ph.D. <br /> <br /></h3>
+											<p><a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a></p>
+											<p><a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a></p>
+											<p><a href="hieu.nguyen@nih.gov">Email</a></p>
+										</header>
+									</section>
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
 
 								<!-- Content -->
-									<article class="box post">
-										<header>
-											<h3>TBU</h3>
-										</header>
-									</article>
+								<article class="box post">
+									<section>
+										<h3>Real-time 3D shape, deformation and vibration measurements</h3>
+										<h7>
+											Projects utilize precise techniques like structured light and stereo vision in experimental mechanics and optical metrology, including Fringe Projection Profilometry (FPP) and Digital Image Correlation (DIC).
+										</h7>
+									</section>
+
+									<section id="slider1">
+										<div class="container1">
+											<div class="subcontainer1">
+												<div class="slider-wrapper1">
+													<div class="my-slider1">
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-1">
+																	<a href="https://doi.org/10.1088/0957-0233/25/3/035401">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Accurate 3D shape measurement of multiple separate objects with stereo vision</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Meas. Sci. Techn.</strong> 2014</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-2">
+																	<a href="https://doi.org/10.1117/1.OE.53.11.110502">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Audio extraction from silent high-speed video using an optical technique</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Optical Engineering</strong> 2014</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-3">
+																	<a href="https://doi.org/10.1364/AO.54.0000A9">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify"> Real-time, high-accuracy 3D imaging and shape measurement </p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Applied Optics</strong> 2015</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-4">
+																	<a href="https://doi.org/10.1364/AO.56.009030">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify"> 3D shape, deformation, and vibration measurements using infrared Kinect sensors and digital image correlation </p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Applied Optics</strong> 2017</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-5">
+																	<a href="https://doi.org/10.1364/AO.57.002188">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify"> Three-dimensional facial digitization using advanced digital image correlation </p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Applied Optics</strong> 2018</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-6">
+																	<a href="https://doi.org/10.1364/AO.58.007100">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify"> Real-time 3D shape measurement using 3LCD projection and deep machine learning </p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Applied Optics</strong> 2019</p>
+																</div>
+															</div>
+														</div>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</section>
+
+									<section>
+										<h3>Structured-light and Deep Learning Integration</h3>
+										<h7>
+											The projects combine traditional Fringe Projection Profilometry (FPP) with deep learning to enhance 3D shape reconstruction while reducing the need for multiple inputs.
+											This integration yields high-quality 3D results using techniques like fringe-to-depth, fringe-to-fringe, and fringe-to-phase approaches.
+										</h7>
+									</section>
+
+									<section id="slider2">
+										<div class="container2">
+											<div class="subcontainer2">
+												<div class="slider-wrapper2">
+													<div class="my-slider2">
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-21">
+																	<a href="https://doi.org/10.3390/s20133718">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Single-Shot 3D Shape Reconstruction Using Structured Light and Deep Convolutional Neural Networks</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Sensors</strong> 2020</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-22">
+																	<a href="https://doi.org/10.1364/AO.426189">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">MIMONet: Structured-light 3D shape reconstruction by a multi-input multi-output network</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Applied Optics</strong> 2021</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-23">
+																	<a href="https://doi.org/10.1016/j.rio.2021.100104">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">hNet: Single-shot 3D shape reconstruction using structured light and h-shaped global guidance network</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Results in Optics</strong> 2021</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-24">
+																	<a href="https://doi.org/10.3390/photonics8110459">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Accurate 3D Shape Reconstruction from Single Structured-Light Image via Fringe-to-Fringe Network</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Photonics</strong> 2021</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-25">
+																	<a href="https://doi.org/10.1016/j.measurement.2021.110663">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Accurate 3D reconstruction via fringe-to-phase network</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Measurement</strong> 2022</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-26">
+																	<a href="https://doi.org/10.1016/j.gmod.2023.101171">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Learning-based 3D imaging from single structured-light image</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Graphical Models</strong> 2023</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-27">
+																	<a href="https://doi.org/10.3390/s23094209">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Generalized fringe-to-phase framework for single-shot 3D reconstruction integrating structured light with deep learning</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Sensors</strong> 2023</p>
+																</div>
+															</div>
+														</div>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</section>
+
+									<section>
+										<h3>Preclinical Transcranial Magnetic Stimulation (TMS) system</h3>
+										<h7>
+											Development of a comprehensive TMS sytem for rodents, incorporating a high-frequency biphasic stimulator and rodent coil with high focality.
+										</h7>
+									</section>
+
+									<section id="slider3">
+										<div class="container3">
+											<div class="subcontainer3">
+												<div class="slider-wrapper3">
+													<div class="my-slider3">
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-31">
+																	<a href="https://doi.org/10.1016/j.brs.2022.05.017">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">A High-Density Theta Burst Paradigm Enhances the Aftereffects of Transcranial Magnetic Stimulation: Evidence from Focal Stimulation of Rat Motor Cortex</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Brain Stimulation</strong> 2022</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-32">
+																	<a href="https://doi.org/10.1088/1741-2552/acae0d">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Journal of Neural Engineering</strong> 2023</p>
+																</div>
+															</div>
+														</div>
+
+														<div>
+															<div class="slide">
+																<div class="slide-img img-33">
+																	<a href="">Click to learn more</a>
+																</div>
+																<div>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;" align="justify">High inductance magnetic-core coils have enhanced efficiency in inducing suprathreshold motor response in rats</p>
+																	<p style="font-size: 0.7em; line-height:1.5; color: black;"> <strong>*Physics in Medicine and Biology</strong> 2023</p>
+																</div>
+															</div>
+														</div>
+
+														
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</section>
+									
+								</article>
+
 							</div>
 						</div>
 					</div>
 				</section>
 
-			<!-- Footer -->
-				<!--<section id="footer">
-					<div class="container">
-						<div class="row">
-							<div class="col-8 col-12-medium">
-								<section>
-									<header>
-										<h2>Blandit nisl adipiscing</h2>
-									</header>
-									<ul class="dates">
-										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>15</strong></span>
-											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
-											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>12</strong></span>
-											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
-											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
-										</li>
-										<li>
-											<span class="date">Jan <strong>10</strong></span>
-											<h3><a href="#">Blandit tempus aliquam?</a></h3>
-											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>What's this all about?</h2>
-									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
-									</p>
-									<footer>
-										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
-										</ul>
-									</footer>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Tempus consequat</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<section>
-									<header>
-										<h2>Ipsum et phasellus</h2>
-									</header>
-									<ul class="divided">
-										<li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-										<li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
-										<li><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
-										<li><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
-										<li><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
-										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>Vitae tempor lorem</h2>
-									</header>
-									<ul class="social">
-										<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-										<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-										<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
-									</ul>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<p>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
-											</p>
-										</li>
-										<li>
-											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
-										</li>
-									</ul>
-								</section>
-							</div>
-							<div class="col-12">-->
-
-								<!-- Copyright -->
-									<!--<div id="copyright">
-										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
-
-							</div>
-						</div>
-					</div>
-				</section>-->
+			
 
 		</div>
 
@@ -199,6 +324,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="script.js"></script>
 	</body>
 </html>
