--- a/research.html
+++ b/research.html
@@ -47,6 +47,10 @@
 											<p><a href="https://scholar.google.com/citations?user=7DygJRIAAAAJ&hl=en">Google Scholar</a></p>
 											<p><a href="https://www.linkedin.com/in/29nguyen/">LinkedIn</a></p>
 											<p><a href="mailto:hieu.nguyen@nih.gov">Email</a></p>
+
+											<h3>Quicklinks<br /></h3>
+											<p><a href="dataset.html#dataset_1">[Dataset 1] - 658 samples</a></p>
+											<p><a href="dataset.html#dataset_2">[Dataset 2] - 1523 samples</a></p>
 										</header>
 									</section>
 							</div>
