--- a/publication.html
+++ b/publication.html
@@ -44,7 +44,7 @@
 
 											<h3>Quicklinks<br /></h3>
 											<p><a href="dataset.html#dataset_1">[Dataset 1] - 658 samples</a></p>
-											<p><a href="dataset.html">[Dataset 2] - 1523 samples</a></p>
+											<p><a href="dataset.html#dataset_2">[Dataset 2] - 1523 samples</a></p>
 
 
 										</header>
@@ -75,6 +75,8 @@
 									</header>
 									<p>
 										<ol reversed>
+											<li>X. Xiao, C. Hammond, B. J. Salmeron, D. Wang, H. Gu, T. Zhai, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, T. J. Ross and Y. Yang, "<a href="https://doi.org/10.1016/j.biopsych.2023.08.028">Brain Functional Connectome Defines a Transdiagnostic Dimension Shared by Cognitive Function and Psychopathology in Preadolescents</a>,"  <em>Biol. Psychiatry</em>, 2023.</li>
+											<li><span style="font-weight:bold;">A.H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/s23167284">Time-Distributed Framework for 3D Reconstruction Integrating Fringe Projection with Deep Learning</a>,"  <em>Sensors</em> <span style="font-weight:bold;">23</span>, 7284, 2023.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span>, K. Ly, V.K. Lam and Z. Wang, "<a href="https://doi.org/10.3390/s23094209">Generalized fringe-to-phase framework for single-shot 3D reconstruction integrating structured light with deep learning</a>,"  <em>Sensors</em> <span style="font-weight:bold;">23</span>, 4209, 2023.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span>, O. Rees, and Z. Wang, "<a href="https://doi.org/10.1016/j.gmod.2023.101171">Learning-based 3D imaging from single structured-light image</a>,"  <em>Graph. Models</em> <span style="font-weight:bold;">126</span>, 101171, 2023.</li>
 											<li>S. Makaroff, <span style="font-weight:bold;">H. Nguyen</span>, Q. Meng, H. Lu, A. Nummenmaam, and Z. Deng, "<a href="https://doi.org/10.1088/1741-2552/acae0d">Modeling Transcranial Magnetic Stimulation Coils with Magnetic Cores</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">20</span>, 016028, 2023.</li>
