--- a/publication.html
+++ b/publication.html
@@ -75,6 +75,7 @@
 									</header>
 									<p>
 										<ol reversed>
+											<li><span style="font-weight:bold;">H. Nguyen</span>, C. Li, S. Hoffman, Z. Deng, Y. Yang and H. Lu, "Ultra-high frequency repetitive TMS at subthreshold intensity induces suprathreshold motor response via temporal summation,"  <em>J. Neural Eng.</em>, 2024.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/s24103246">Single-shot 3D Reconstruction via nonlinear Fringe Transformation: Supervised and Unsupervised Learning Approaches</a>," <em>Sensors</em> <span style="font-weight:bold;">24</span>, 3246, 2024.</li>
 											<li><span style="font-weight:bold;">H. Nguyen</span>, S. Makaroff, C. Li, S. Hoffman, Y. Yang and H. Lu, "<a href="https://doi.org/10.1088/1361-6560/ad0bde">High inductance magnetic-core coils have enhanced efficiency in inducing suprathreshold motor response in rats</a>," <em>Phys. Med. Biol.</em> <span style="font-weight:bold;">68</span>, 244001, 2023.</li>
 											<li>X. Xiao, C. Hammond, B. J. Salmeron, D. Wang, H. Gu, T. Zhai, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, T. J. Ross and Y. Yang, "<a href="https://doi.org/10.1016/j.biopsych.2023.08.028">Brain Functional Connectome Defines a Transdiagnostic Dimension Shared by Cognitive Function and Psychopathology in Preadolescents</a>," <em>Biol. Psychiatry</em>, 2023.</li>
