--- a/publication.html
+++ b/publication.html
@@ -75,6 +75,7 @@
 									</header>
 									<p>
 										<ol reversed>
+											<li><span style="font-weight:bold;">H. Nguyen</span>, M. Vo, J. Hyatt and Z. Wang, "<a href="https://doi.org/10.3390/s25061758">AI-Powered Visual Sensors and Sensing: Where We Are and Where We Are Going</a>," <em>Sensors</em> <span style="font-weight:bold;">25</span>, 1758, 2025.</li>
 											<li><span style="font-weight:bold;">H. Nguyen</span>, C. Li, S. Hoffman, Z. Deng, Y. Yang and H. Lu, "<a href="https://doi.org/10.1088/1741-2552/ad692f">Ultra-high frequency repetitive TMS at subthreshold intensity induces suprathreshold motor response via temporal summation</a>,"  <em>J. Neural Eng.</em> <span style="font-weight:bold;">21</span>, 046044, 2024.</li>
 											<li><span style="font-weight:bold;">A.H. Nguyen</span> and Z. Wang, "<a href="https://doi.org/10.3390/s24103246">Single-shot 3D Reconstruction via nonlinear Fringe Transformation: Supervised and Unsupervised Learning Approaches</a>," <em>Sensors</em> <span style="font-weight:bold;">24</span>, 3246, 2024.</li>
 											<li>X. Xiao, C. Hammond, B. J. Salmeron, D. Wang, H. Gu, T. Zhai, <span style="font-weight:bold;">H. Nguyen</span>, H. Lu, T. J. Ross and Y. Yang, "<a href="https://doi.org/10.1016/j.biopsych.2023.08.028">Brain Functional Connectome Defines a Transdiagnostic Dimension Shared by Cognitive Function and Psychopathology in Preadolescents</a>," <em>Biol. Psychiatry</em> <span style="font-weight:bold;">95</span>, 1081-1090, 2024</li>
